@@ -1,3 +1,15 @@
+2025-03-19  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-skeleton-process-file): Raise a warning if
+	STDERR is not implemented.
+	(tramp-handle-shell-command):
+	Respect `async-shell-command-display-buffer'.
+
+	* tramp-gvfs.el (tramp-gvfs-do-copy-or-rename-file): Handle symlinks.
+
+	* tramp-sshfs.el (tramp-sshfs-handle-process-file): STDERR is not
+	implemented.
+
 2025-03-18  Stefan Kangas  <stefankangas@gmail.com>
 
 	* tramp-cmds.el (tramp-rename-files): Prefer 'help-key' when available.
